@@ -2767,13 +2767,16 @@ $templates
 	/**
 	 * Get an array containing the variables to be set in mw.config in JavaScript.
 	 *
+	 * DO NOT CALL THIS FROM OUTSIDE OF THIS CLASS OR Skin::makeGlobalVariablesScript().
+	 * This is only public until that function is removed. You have been warned.
+	 *
 	 * Do not add things here which can be evaluated in ResourceLoaderStartupScript
 	 * - in other words, page-independent/site-wide variables (without state).
 	 * You will only be adding bloat to the html page and causing page caches to
 	 * have to be purged on configuration changes.
 	 * @return array
 	 */
-	protected function getJSVars() {
+	public function getJSVars() {
 		global $wgUseAjax, $wgEnableMWSuggest;
 
 		$title = $this->getTitle();
